--- a/FRONTEND/bower.json
+++ b/FRONTEND/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "crypto-js": "^3.1.7"
+    "crypto-js": "^3.1.7",
+    "bootstrap-calendar": "^0.2.5"
   }
 }
