--- a/FRONTEND/bower.json
+++ b/FRONTEND/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "crypto-js": "^3.1.7",
-    "bootstrap-calendar": "^0.2.5"
+    "bootstrap-calendar": "^0.2.5",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.43"
   }
 }
